Fix test. Why did we use jdk.internal.misc instead of sun.misc though